# trakr

./: Cargo.toml  LICENSE  README.md  justfile
doc/: README.md  agentsview-comparison.md  claude-hooks.md  claude-integration-options.md  claude-session-logs.md  event-sourced-sessions.md  otel-enterprise-investigation.md  otel-telemetry-schema.md  plan.md  requirements.md  serve-daemon.md  session-end-detection.md  session-lifecycle.md  transcript-structure.md
doc/planning/: otel-gap-fill-plan.md  plan.md  single-ledger-plan.md
src/: archive.rs  backfill.rs  breakdown.rs  config.rs  cost.rs  event.rs  hooks.rs  lib.rs  main.rs  otel_receiver.rs  rates.rs  server.rs  storage.rs  transcript.rs
