[package]
name = "ctx-trakr"
version = "0.1.0"
edition = "2021"
description = "A Rust tool that integrates with Claude Code hooks to track context, tools, models, and agents."
license = "MIT"

[[bin]]
name = "ctx-trakr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
