[package]
name = "ctx-trakr"
version = "0.1.0"
edition = "2021"
description = "A Rust tool that integrates with Claude Code hooks to track context, tools, models, and agents."
license = "MIT"

[[bin]]
name = "trakr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
toml = "0.8"
filetime = "0.2"

[dev-dependencies]
tempfile = "3"
