[package]
name = "trakr"
version = "0.1.9"
edition = "2021"
description = "Track Claude Code session spend, tool use, and model usage from native session transcripts."
homepage = "https://github.com/ubiqtek-ai/trakr"
repository = "https://github.com/ubiqtek-ai/trakr"
license = "MIT"
keywords = ["claude", "ai", "spend", "tracking", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "trakr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
toml = "0.8"
ureq = { version = "2", features = ["json"] }
filetime = "0.2"

[dev-dependencies]
tempfile = "3"
